UtahLiveDataTest/src/objects/LoginPageConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting stores the list of login page details for different flavors</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PageName__c</fullName>
        <label>VF Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Login Page Config</label>
</CustomObject>